# Manim-CLI

./: .gitignore  CLAUDE.md  LLM_GUIDELINES.md  README.md  pyproject.toml  rules.json  setup.py
.claude/skills/dev/: manim-cli.md
.github/workflows/: manim-policy-gate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
manim_cli/: __init__.py
manim_cli/manim/: __init__.py  _meta.py  cli.py
manim_cli/manim/core/: __init__.py  analyze.py  constants.py  fix.py  install.py  project.py  render.py  rules.py  scene_index.py  validate.py  watch.py
manim_cli/manim/utils/: __init__.py  output.py
manim_cli/skills/manim-cli/: README.md  ci-gate.md  pipeline.md  policy-fix.md  project-init.md  rules-config.md  scene-analysis.md  validator.md
scenes/: example_scene.py
skills/manim-cli/: README.md  SKILL.md  ci-gate.md  pipeline.md  policy-fix.md  project-init.md  rules-config.md  scene-analysis.md
tests/: test_analyze_validate.py  test_cli_subprocess.py  test_fix.py  test_install.py  test_render.py  test_render_e2e.py  test_rules.py  test_scene_discovery.py  test_scene_index.py  test_validate_repo.py
